--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "type": "git",
     "url": "git@gitlab.hers.rs:allex_services/master.git"
   },
+  "dependencies": {
+    "allex_unixsocketcleanerserverruntimelib": "1.x"
+  },
   "keywords": [
     "ecosystem:allex",
     "Service",
