--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "allex_masterservice",
-  "version": "0.1.1",
+  "version": "1.0.0",
   "description": "MasterService",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@gitlab.hers.rs:allex_services/master.git"
+    "url": "git@github.com:allex-services/master.git"
   },
   "dependencies": {
     "allex_unixsocketcleanerserverruntimelib": "1.x"
@@ -21,4 +21,3 @@
   "author": "HERS Belgrade",
   "license": "ISC"
 }
-
